--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -59,7 +59,7 @@ jobs:
   #           heroku_email: ${{secrets.HEROKU_USER_EMAIL}}
 
   Railway-deploy:
-    needs: integrationtests
+    # needs: integrationtests
     runs-on: ubuntu-latest
     environment:
       name: Railway # naam van mijn environment op GitHub
