--- a/package.json
+++ b/package.json
@@ -24,13 +24,6 @@
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
     "mocha": "^10.2.0",
-    "nodemon": "^2.0.22",
-    "prettier": "^2.8.7"
-  },
-  "prettier": {
-    "trailingComma": "none",
-    "tabWidth": 2,
-    "semi": true,
-    "singleQuote": true
+    "nodemon": "^2.0.22"
   }
 }
