--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.3",
-    "tracer": "^1.1.6"
+    "tracer": "^1.1.6",
+    "yargs": "^17.7.2"
   },
   "devDependencies": {
     "chai": "^4.3.7",
