--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
   "author": "david",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "mysql2": "^3.2.3",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.3.1",
     "tracer": "^1.1.6",
     "yargs": "^17.7.2"
   },
